# BAD_CODE

./: .gitignore  CMakeLists.txt  README.md  config.ini  main.c
#DELIVERABLE/docs/: Groupe 11 - Descriptif technique.docx
#DELIVERABLE/drivers dlls bibliothèques/: drivers & bibliothèques.md
#DELIVERABLE/sources & exécutable & bdd/: main.c
#DELIVERABLE/sources & exécutable & bdd/bdd/: database.db
#DELIVERABLE/sources & exécutable & bdd/headers/: sqliteFunctions.h
#INSTALL/: config.ini
#SOURCE/: CMakeLists.txt
#SOURCE/bdd/: script.sql
#SOURCE/glade/: registration.glade
#SOURCE/headers/: gtkFunctions.h  sqliteFunctions.c
INSTALL/: Download Setup config.7z  config.ini
INSTALL/glade/: dashboard.glade
bdd/: database.db  script.sql
docs/: Groupe 11 - Dossier d'utilisation.docx  ~$scriptif technique.docx  ~$ssier d'utilisation.docx  ~WRL1142.tmp
glade/: classes.glade  dashboard.glade  listStudents.glade  registration.glade  test.glade
headers/: ftkFunctions.c  functions.c  functions.h  gtkFunctions.c  gtkFunctions.h  sqliteFunctions.c  sqliteFunctions.h
installation/: Download Setup config.7z
installation/glade/: dashboard.glade
source/: config.ini
storage/student/1/: image.jfif
